@@ -652,6 +652,9 @@ namespace K3bCdDevice
     void checkForAncientWriters();
     int rawTocDataWithBcdValues( unsigned char* data, int dataLen ) const;
 
+    bool getSupportedWriteSpeedsVia2A( QValueList<int>& list, bool dvd ) const;
+    bool getSupportedWriteSpeedsViaGP( QValueList<int>& list, bool dvd ) const;
+
     QString m_vendor;
     QString m_description;
     QString m_version;
